--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
 <script>
     // Link tujuan
-    const targetUrl = "https://drive.google.com/file/d/1Up_YQZduOcebS_d_UisK2s-TaeKT586x/preview";
+    const targetUrl = "https://bapeten.github.io/balis/S1/250184311_KTUN_Sertifikat_UK_PT.%20Natus%20Vincere%20Medika.pdf";
 
     function generateCaptcha() {
         const characters = 'abcdefghijklmnopqrstuvwxyz0123456789';
@@ -118,3 +118,4 @@
 </body>
 
 </html>
+
